--- a/src/optimalcontrol/tests/CMakeLists.txt
+++ b/src/optimalcontrol/tests/CMakeLists.txt
@@ -25,6 +25,7 @@ add_oc_test(ConstraintsGroup)
 add_oc_test(Integrators)
 add_oc_test(OCProblem)
 add_oc_test(MultipleShooting)
+add_oc_test(L2Norm)
 if (IDYNTREE_USES_IPOPT)
     add_oc_test(Optimizer)
     add_oc_test(OptimalControlIpopt)
