[Python bindings] implemented native vector/matrix conversion.
Removed the python functions `init_helpers` and `init_numpy_helpers` that were used
to create Vector/Matrix objects from Python lists, and for transforming Vector/Matrix into
NumPy objects.

`toNumPy()` has kept the same name, so no change in code should be needed. It has been
implemented in C++ instead of using Python.
`fromList` has been removed. Now there is a new function `fromPython` (written in C++) that
accepts either a NumPy array (of the proper dimension) or a Python List (again, of the
proper dimension).
Both functions have been implemented for [Matrix|Vector][Fix|Dyx]Size and for
Wrench, SpatialAcc and Twist.

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(NumPy REQUIRED)
+
 set(CMAKE_SWIG_FLAGS "-Wextra;-module;iDynTree;-threads")
 set(IDYNTREE_USES_PYTHON_VERSION "" CACHE STRING "Specify python version to use" )
 
@@ -8,7 +10,7 @@ set(IDYNTREE_USES_PYTHON_VERSION_ARGS)
   endif()
 
 find_package(PythonLibs ${IDYNTREE_USES_PYTHON_VERSION} EXACT)
-include_directories(${PYTHON_INCLUDE_PATH})
+include_directories(${PYTHON_INCLUDE_PATH} ${PYTHON_NUMPY_INCLUDE_DIR})
 link_libraries(${PYTHON_LIBRARY})
 
 ## in Windows it seems necessary to declare explictly the link_directory
