--- a/src/legacy/icub-kdl/CMakeLists.txt
+++ b/src/legacy/icub-kdl/CMakeLists.txt
@@ -40,7 +40,7 @@ set_target_properties(${libraryname} PROPERTIES VERSION ${${VARS_PREFIX}_VERSION
 
 get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
 
-target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include;${IDYNTREE_TREE_INCLUDE_DIRS}>"
+target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>")
 
 target_link_libraries(${libraryname} LINK_PUBLIC  skinDynLib iKin iDyn
