Make libxml2 embeddable
I see that libxml2 headers are private, so some else can set :
```cmake
    set(LIBXML2_INCLUDE_DIR /the/master/project/external/libxml2-x.y.z/include)
    set(LIBXML2_LIBRARY xml2)
```

--- a/src/model_io/urdf/CMakeLists.txt
+++ b/src/model_io/urdf/CMakeLists.txt
@@ -8,7 +8,9 @@
 
 project(iDynTree_ModelIO_URDF CXX)
 
-find_package(LibXml2 REQUIRED)
+if(NOT LIBXML2_LIBRARY OR NOT LIBXML2_INCLUDE_DIR)
+    find_package(LibXml2 REQUIRED)
+endif()
 
 set(IDYNTREE_MODELIO_URDF_HEADERS include/iDynTree/ModelIO/URDFDofsImport.h
                                   include/iDynTree/ModelIO/ModelLoader.h
