Added ALGLIB interface and WORHP interface.
Inherited from feature/OCNLPSOlvers branch.

--- a/src/optimalcontrol/CMakeLists.txt
+++ b/src/optimalcontrol/CMakeLists.txt
@@ -90,6 +90,23 @@ else()
     list(APPEND OPTIMIZERS_SOURCES src/OsqpInterfaceNotImplemented.cpp)
 endif()
 
+list(APPEND OPTIMIZERS_HEADERS include/iDynTree/Optimizers/AlglibInterface.h)
+if (IDYNTREE_USES_ALGLIB)
+    list(APPEND OPTIMIZERS_SOURCES src/AlglibInterface.cpp)
+    list(APPEND LINK_LIST ${ALGLIB_LIB})
+    list(APPEND INCLUDE_LIST ${ALGLIB_INCLUDE_DIRS})
+else()
+    list(APPEND OPTIMIZERS_SOURCES src/AlglibInterfaceNotImplemented.cpp)
+endif()
+
+list(APPEND OPTIMIZERS_HEADERS include/iDynTree/Optimizers/WorhpInterface.h)
+if (IDYNTREE_USES_WORHP)
+    list(APPEND OPTIMIZERS_SOURCES src/WorhpInterface.cpp)
+    list(APPEND LINK_LIST ${WORHP_LIB})
+    list(APPEND INCLUDE_LIST ${WORHP_INCLUDE_DIRS})
+else()
+    list(APPEND OPTIMIZERS_SOURCES src/WorhpInterfaceNotImplemented.cpp)
+endif()
 
 add_library(${libraryname} ${PUBLIC_HEADERS} ${INTEGRATORS_PUBLIC_HEADERS} ${OCSOLVERS_PUBLIC_HEADERS} ${OPTIMIZERS_HEADERS} ${SOURCES} ${OPTIMIZERS_SOURCES})
 target_include_directories(${libraryname} SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
