--- a/src/model_io/urdf/tests/CMakeLists.txt
+++ b/src/model_io/urdf/tests/CMakeLists.txt
@@ -28,3 +28,5 @@ add_modelio_urdf_unit_test(ModelExporter)
 add_modelio_urdf_unit_test(URDFGenericSensorImport)
 add_modelio_urdf_unit_test(PredictSensorsMeasurement)
 add_modelio_urdf_unit_test(icubSensorURDF)
+add_modelio_urdf_unit_test(ModelCalibrationHelper)
+
