Added visualization of vectors.
Fix of few memory leaks related to visualization.

--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -15,12 +15,14 @@ if(IDYNTREE_USES_IRRLICHT)
                                                src/Environment.h
                                                src/ModelVisualization.h
                                                src/JetsVisualization.h
+                                               src/VectorsVisualization.h
                                                src/Light.h
                                                src/FloorGridSceneNode.h)
     set(iDynTree_visualization_private_source  src/Camera.cpp
                                                src/Environment.cpp
                                                src/ModelVisualization.cpp
                                                src/JetsVisualization.cpp
+                                               src/VectorsVisualization.cpp
                                                src/Light.cpp
                                                src/FloorGridSceneNode.cpp)
 endif()
