Using target properties instead of propagating variables for ALGLIB and WORHP.

--- a/src/optimalcontrol/CMakeLists.txt
+++ b/src/optimalcontrol/CMakeLists.txt
@@ -93,8 +93,7 @@ endif()
 list(APPEND OPTIMIZERS_HEADERS include/iDynTree/Optimizers/AlglibInterface.h)
 if (IDYNTREE_USES_ALGLIB)
     list(APPEND OPTIMIZERS_SOURCES src/AlglibInterface.cpp)
-    list(APPEND LINK_LIST ${ALGLIB_LIB})
-    list(APPEND INCLUDE_LIST ${ALGLIB_INCLUDE_DIRS})
+    list(APPEND LINK_LIST ALGLIB)
 else()
     list(APPEND OPTIMIZERS_SOURCES src/AlglibInterfaceNotImplemented.cpp)
 endif()
@@ -102,8 +101,7 @@ endif()
 list(APPEND OPTIMIZERS_HEADERS include/iDynTree/Optimizers/WorhpInterface.h)
 if (IDYNTREE_USES_WORHP)
     list(APPEND OPTIMIZERS_SOURCES src/WorhpInterface.cpp)
-    list(APPEND LINK_LIST ${WORHP_LIB})
-    list(APPEND INCLUDE_LIST ${WORHP_INCLUDE_DIRS})
+    list(APPEND LINK_LIST WORHP::WORHP)
 else()
     list(APPEND OPTIMIZERS_SOURCES src/WorhpInterfaceNotImplemented.cpp)
 endif()
