--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -70,6 +70,9 @@ if(IDYNTREE_USES_IRRLICHT)
 
     target_include_directories(${libraryname} PRIVATE SYSTEM ${IRRLICHT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
     target_link_libraries(${libraryname} LINK_PRIVATE ${IRRLICHT_LIBRARY} ${OPENGL_LIBRARIES})
+    if(MSVC)
+       add_definitions(-D_USE_MATH_DEFINES)
+    endif()
     add_definitions(-DIDYNTREE_USES_IRRLICHT)
 
     # On Apple system, irrlicht uses some system libraries 
