Fix macOS Travis build (#509)
* Fix macOS Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ stage_osx:
     - brew install ccache
     - export PATH="/usr/local/opt/ccache/libexec:$PATH"
     # Install dependencies
-    - brew install ace eigen boost tinyxml swig qt5 gsl pkg-config jpeg sqlite tinyxml
+    - brew install ace eigen tinyxml swig qt5 gsl pkg-config jpeg tinyxml
     - export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
   script: &osx_script
     - cd $TRAVIS_BUILD_DIR/.ci
@@ -78,6 +78,7 @@ jobs:
     - &osx_template
       stage: osx
       os: osx
+      services:
       osx_image: xcode9.4
       before_install: skip
       install: *osx_install
