[estimation][AttitudeEstimator] implements Mahony filter

--- a/src/estimation/CMakeLists.txt
+++ b/src/estimation/CMakeLists.txt
@@ -16,7 +16,9 @@ set(IDYNTREE_ESTIMATION_HEADERS include/iDynTree/Estimation/BerdyHelper.h
                                 include/iDynTree/Estimation/SchmittTrigger.h
                                 include/iDynTree/Estimation/ContactStateMachine.h
                                 include/iDynTree/Estimation/BipedFootContactClassifier.h
-                                include/iDynTree/Estimation/GravityCompensationHelpers.h)
+                                include/iDynTree/Estimation/GravityCompensationHelpers.h
+                                include/iDynTree/Estimation/AttitudeEstimator.h
+                                include/iDynTree/Estimation/AttitudeMahonyFilter.h)
 
 set(IDYNTREE_ESTIMATION_PRIVATE_INCLUDES )
 
@@ -28,7 +30,9 @@ set(IDYNTREE_ESTIMATION_SOURCES src/BerdyHelper.cpp
                                 src/SchmittTrigger.cpp
                                 src/ContactStateMachine.cpp
                                 src/BipedFootContactClassifier.cpp
-                                src/GravityCompensationHelpers.cpp)
+                                src/GravityCompensationHelpers.cpp
+                                src/AttitudeEstimator.cpp
+                                src/AttitudeMahonyFilter.cpp)
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_ESTIMATION_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_ESTIMATION_HEADERS})
