Add external vendored dependency on the fpconv library
This dependency is necessary to convert a double to its shortest string exact
representation. It can be probably removed as soon as std::to_chars is widely
available.

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -13,3 +13,11 @@ if( (IDYNTREE_USES_OCTAVE OR IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB) A
     # We save the location of MOxUnit in a variable that is then accessible to the test
     set(IDYNTREE_INTERNAL_MOXUNIT_PATH "${CMAKE_CURRENT_LIST_DIR}/MOxUnit/MOxUnit" PARENT_SCOPE)
 endif()
+
+# fpconv ( https://github.com/night-shift/fpconv ) is a small implementation of a shortest exact representation of double to string
+# as of C++14, it has no equivalent in the C++ standaard, as using stringstream with setprecision(17) result
+# in printing long numbers (such as 1.000000000000000000000) even when there is a short equivalent representation (1.0)
+# This can be removed once std::to_chars from the charconv header introduced in C++17 becomes widely available
+# We imported the MIT-licensed source code from https://github.com/night-shift/fpconv/tree/4a087d1b2df765baa409536931916a2c082cdda4
+add_library(idyntree-private-fpconv OBJECT fpconv/fpconv.c)
+target_include_directories(idyntree-private-fpconv PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/fpconv)
