Fix CMake warning in solid-shapes if

--- a/src/solid-shapes/CMakeLists.txt
+++ b/src/solid-shapes/CMakeLists.txt
@@ -36,4 +36,4 @@ set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS ${CMAKE_CURRENT_S
 
 if(IDYNTREE_COMPILE_TESTS AND IDYNTREE_USES_ASSIMP)
     add_subdirectory(tests)
-endif(IDYNTREE_COMPILE_TESTS)
+endif()
